--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.0",
+    "@prisma/nuxt": "^0.3.0",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.7",
     "nuxt": "^3.15.4",
@@ -17,8 +19,10 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxtjs/supabase": "^1.4.6",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
+    "prisma": "^6.4.0",
     "tailwindcss": "^4.0.7",
     "typescript": "^5.7.3"
   }
