--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
   },
   "devDependencies": {
     "@nuxtjs/supabase": "^1.4.6",
+    "@types/node": "^22.13.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
     "prisma": "^6.4.0",
     "tailwindcss": "^4.0.7",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
