--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.10.1",
     "@prisma/client": "^6.4.0",
     "@prisma/nuxt": "^0.3.0",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.7",
     "nuxt": "^3.15.4",
+    "pinia": "^3.0.1",
     "vue": "latest",
     "vue-router": "latest"
   },
