--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.10.3",
     "@pinia/nuxt": "^0.10.1",
     "@prisma/client": "^6.4.0",
     "@prisma/nuxt": "^0.3.0",
