--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/nuxt": "^0.3.0",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.7",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.15.4",
     "pinia": "^3.0.1",
     "vue": "latest",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@nuxtjs/supabase": "^1.4.6",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
