--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.5.0",
     "@nuxtjs/supabase": "^1.4.6",
+    "@types/faker": "^6.6.8",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.4",
     "autoprefixer": "^10.4.20",
+    "faker": "^5.5.3",
     "postcss": "^8.5.2",
     "prisma": "^6.4.0",
     "tailwindcss": "^4.0.7",
