--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nuxt": "^3.15.4",
     "pinia": "^3.0.1",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.5.0",
